Fixed the animation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 			<button id="animate">Call the Beast!</button>
 		</div>
 		<div id="foreground"></div>
-		<div id="demon" class="animated"></div>
+		<div id="demon"></div>
 	</body>
 </html>
